@@ -180,6 +180,8 @@ IgProfMem::initialize (void)
 		    break;
 	    }
 	}
+	else
+	    options++;
 
 	while (*options && *options != ',' && *options != ' ')
 	    options++;
